# masters_thesis

./: README.md  Total.tex
Backmatter/: Appendix.tex
Bibliography/: Landslide_Literature.bib
Chapters/: Introduction.tex  Methods.tex  Results.tex
Preamble/: Acronyms.tex  Copyright.tex  Preface.tex  Summary.tex  Titlepage.tex
implementation/boolean/: Cargo.toml
implementation/boolean/src/: main.rs
