[package]
name = "document_image"
version = "0.1.0"
authors = ["smith"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bellman = "0.9.0"
bls12_381 = "0.4.0"
ff = "0.9.0"
image = "0.23.14"
rand = "0.8.3"
sha2 = "0.9.5"
time = "0.2.26"
